Clarify that CRAM SAM header may be uncompressed (PR #682)
I added "If compressed, ", but this commit also adjusted the rather
odd line wrapping for the paragraph (of which we have a mixture of
styles in use).

Fixes #677

--- a/CRAMv3.tex
+++ b/CRAMv3.tex
@@ -586,10 +586,10 @@ fields to the value 0.
 
 \subsection{\textbf{CRAM header container}}
 
-The first container in a CRAM file contains a textual header in a single block, optionally
-gzip compressed. This text header currently matches the SAM header specification. Only
-gzip is allowed as compression method for this block. The CRAM header container does not
-include a compression header block.
+The first container in a CRAM file contains a textual header in a single block, optionally gzip compressed.
+This text header currently matches the SAM header specification.
+If compressed, only gzip is allowed as compression method for this block.
+The CRAM header container does not include a compression header block.
 
 It is recommended to reserve 50\% more space in the CRAM header container than
 is required for the SAM header text by optionally padding the container with a second
