SAM: add a sentence on case-insensitivity of RG PL (PR #684)
This is not changing what is valid / permitted, and indeed this
hopefully clarifies it further.  However the practicality of dealing
with wide-spread non-compliant data with lowercase PL values is that
tools may wish to be lenient and use case-insensitive matching.

Also removes test/sam/failed/hdr.RG6.sam due to explicitly testing
against the use of lower-case PL fields.  While strictly not
conforming, it's overly harsh if we are advocating a more
spec-tolerant testing regime for PL.

Fixes #679

--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -330,7 +330,8 @@ The {\tt TP} field is often omitted, which implies linear.}\\\cline{2-3}
   & {\tt PI} & Predicted median insert size, rounded to the nearest integer.\\\cline{2-3}
   & {\tt PL} & Platform/technology used to produce the reads. \emph{Valid values}:
   {\tt CAPILLARY}, {\tt DNBSEQ} (MGI/BGI), {\tt ELEMENT}, {\tt HELICOS}, {\tt ILLUMINA}, {\tt IONTORRENT}, {\tt LS454}, {\tt ONT} (Oxford Nanopore), {\tt PACBIO} (Pacific Biosciences), {\tt SINGULAR}, {\tt SOLID}, and {\tt ULTIMA}.
-  This field should be omitted when the technology is not in this list (though the {\tt PM} field may still be present in this case) or is unknown.\\\cline{2-3}
+  This field should be omitted when the technology is not in this list (though the {\tt PM} field may still be present in this case) or is unknown.
+  The values should be written as described in uppercase, however due to the existance of public data with lowercase values tools should also accept lowercase when decoding.\\\cline{2-3}
   & {\tt PM} & Platform model. Free-form text providing further details of the platform/technology used.\\\cline{2-3}
   & {\tt PU} & Platform unit (e.g., flowcell-barcode.lane for Illumina or slide for SOLiD). Unique identifier.\\\cline{2-3}
   & {\tt SM} & Sample. Use pool name where a pool is being sequenced.\\\cline{1-3}
