Rephrased CNV advice to so as to not imply <DEL:TR> or <DUP:TR> should be used.

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -215,7 +215,7 @@ The first level type must be one of the following:
   \item CNV Copy number variable region (may be both deletion and duplication)
 \end{itemize}
 
-The CNV category should not be used when a more specific category can be applied.
+The CNV symbolic allele should not be used when a more specific one (e.g. DEL, CNV:TR) can be applied.
 
 Implementations are free to define their own subtypes.
 The presence of a subtype does not change either the copy number or breakpoint interpretation of a symbolic structural variant allele.
