Updated VCF 4.4 PDF; added "Release Candidate 2" disclaimer text

--- a/VCFv4.4.draft.tex
+++ b/VCFv4.4.draft.tex
@@ -23,7 +23,7 @@
 
 \begin{document}
 \input{VCFv4.4.draft.ver}
-\title{\huge \color{red} DRAFT SPEC SUBJECT TO CHANGE \\ The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2}
+\title{\huge \color{red} DRAFT SPEC SUBJECT TO CHANGE \\ Release Candidate 2 \\ The Variant Call Format Specification \\ \vspace{0.5em} \large VCFv4.4 and BCFv2.2}
 \date{\headdate}
 \maketitle
 \begin{quote}\small
